[package]
name = "bluer-miflora-cli"
description = "CLI to communicate with the miflora devices with bluer"
version = "0.1.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "miflora"
path = "src/main.rs"

[dependencies]
bluer-miflora = { path = "../lib", version = "0.2" }

anyhow = "1.0"
bluer = { version = "0.17", features = ["bluetoothd"] }
futures = "0.3"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
